--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.13.4+2
   json_annotation: ^3.0.1
-
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
