--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,4 +20,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/map_style.txt
-    - assets/images/marker.png
+    - assets/images/marker_green.png
+    - assets/images/marker_orange.png
+    - assets/images/marker_red.png
