style: add image to register screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,3 +28,4 @@ flutter:
     - assets/images/marker_green.png
     - assets/images/marker_orange.png
     - assets/images/marker_red.png
+    - assets/images/register_image.png
