style: add illustration to register screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,3 +31,4 @@ flutter:
     - assets/images/marker_red.png
     - assets/images/intro_customer.png
     - assets/images/intro_shop.png
+    - assets/images/register_image.png
