--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   json_annotation: ^3.0.1
   provider: ^4.0.4
   google_maps_flutter: ^0.5.11
-  pin_code_fields: ^2.4.0
+  pin_code_text_field: ^1.5.1
 
 dev_dependencies:
   flutter_test:
