--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,3 +33,4 @@ flutter:
     - assets/images/intro_customer.png
     - assets/images/intro_shop.png
     - assets/images/register_image.png
+    - assets/images/register_success.png
