--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,3 +37,4 @@ flutter:
     - assets/images/intro_shop.png
     - assets/images/register_image.png
     - assets/images/register_success.png
+    - assets/images/vault_bank_safe.png
